k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: medsync
  labels:
    name: medsync
